--- a/src/NWF/wwwroot/index.html
+++ b/src/NWF/wwwroot/index.html
@@ -17,7 +17,7 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="sass.html">Sass</a></li>
                 <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
+                <li><a href="collapsible.html">JavaScript..</a></li>
             </ul>
         </div>
     </nav>
